--- a/less/footer.less
+++ b/less/footer.less
@@ -115,7 +115,6 @@ footer {
 
         .stacked-logo {
           display: block;
-          width: 50%;
         }
       }
 
